feat: suspend subscription and add API docs
# open api docs
- Subscribe Transaction
- Unsubscribe Transaction
- Suspend Global Subscription Transaction

# New API
- Suspend Global Subscription Transaction
